<resources>
    <string name="app_name">LIBIHB-JAVA</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="life_is_better_in_hiking_boots_logo">Life is better in hiking boots logo</string>
    <string name="life_is_better_in_hiking_boots">LIFE IS BETTER IN HIKING BOOTS</string>
    <string name="home">Home</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login:</string>
    <string name="login_button">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here"> Register here</string>
    <string name="register">Register:</string>
    <string name="repeat_password">Repeat password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_here">Log in here</string>
    <string name="phone_number">Phone number</string>
    <string name="register_button_text">Register</string>
    <string name="name">Name</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact us</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="profile_image">Profile image</string>
    <string name="add_new_memory">Add new memory</string>
    <string name="place_name">Place name</string>
    <string name="place_location">Place location</string>
    <string name="date_of_travel">Date of travel</string>
    <string name="greeting_add_new_song">Here\'s your start with a new memory!</string>
    <string name="add_new_memory_label"> To add a new memory fill in those details:</string>
    <string name="how_would_you_name_your_adventure">How would you name your adventure?</string>
    <string name="maybe_you_want_to_describe_it">Maybe add a little description?</string>
    <string name="picking_a_date_could_be_helpfull">Picking a date could be helpful:</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="choose_the_location">Choose the location:</string>
    <string name="enter_map_full_screen">enter map full screen</string>
    <string name="search_location">Click on the magnifying glass to search for a location</string>
    <string name="search">Search</string>
    <string name="choose_up_to_5_photos">Choose up to 5 photos</string>
    <string name="choose_photos_from_gallery">Choose photos from gallery</string>
    <string name="save">Save</string>
    <string name="registration_successful">Registration successful</string>
    <string name="login_successful">Login successful</string>
    <string name="registration_failed">Registration failed</string>
    <string name="login_failed">Login failed</string>
    <string name="login_failed_after_register_successful">Login failed, please try again</string>
    <string name="input_is_blank_phone">The phone can\'t be empty</string>
    <string name="does_not_match_required_type_phone">The phone number is not valid</string>
    <string name="does_not_have_req_len_phone">The phone number must have 10 digits</string>
    <string name="input_is_blank_password">The password can\'t be empty</string>
    <string name="the_password_must">The password must be at least</string>
    <string name="incorrect_email_or_password">Incorrect email or password</string>
    <string name="characters_long">characters long</string>
    <string name="does_not_match">The passwords do not match</string>
    <string name="email_is_already_used">User email or phone already exists</string>
    <string name="not_complex_password">The password must include: lowercase and uppercase letters, digits, no white spaces</string>
    <string name="input_is_blank_name">The name can\'t be empty</string>
    <string name="does_not_match_required_type_name">The name must be longer</string>
    <string name="input_is_blank_email">The email can\'t be empty</string>
    <string name="does_not_match_required_type_email">The email is not valid</string>
    <string name="app_logo">App logo</string>
    <string name="choose_searched_location">Choose searched location</string>
    <string name="tap_on_the_magnifying_glass"><b>Tap</b> on the <b>magnifying glass</b> and search the memory <b>location</b>:</string>
    <string name="final_look">Take a final look before saving</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="date">Date</string>
    <string name="location_name">Location name</string>
    <string name="a_memory_image">A memory image</string>
    <string name="remove_image_from_list_button">Remove image from list button</string>
    <string name="title">Title</string>
    <string name="memory_saved">Memory saved</string>
    <string name="changes_saved">Changes saved</string>
    <string name="description">Description:</string>
    <string name="location_country">Location country</string>
    <string name="location_admin_area">Location admin area</string>
    <string name="feels_like">Feels like:</string>
    <string name="_10_12">10:12</string>
    <string name="_23">23</string>
    <string name="cloudy">Cloudy</string>
    <string name="sunrise_icon">sunrise icon</string>
    <string name="sunset_icon">sunset icon</string>
    <string name="_20_00">20:00</string>
    <string name="_30">30 km/h</string>
    <string name="_96">96</string>
    <string name="degrees">°</string>
    <string name="pick_a_location">Pick location</string>
    <string name="photo_camera_image">photo camera artwork image</string>
    <string name="a_tikets_image">A artwork tickets image</string>
    <string name="time_to_date_that_memory">Time to date that memory! Add a <b>date</b> and up to 5 gallery <b>pics</b> for the full flashback experience.</string>
    <string name="a_map_artwork_image">a map artwork image</string>
    <string name="artwork_image">a mountain artwork image</string>
    <string name="save_memory">Save memory</string>
    <string name="home_title">Home</string>
    <string name="settings_title">Settings</string>
    <string name="share_title">Share</string>
    <string name="contact_us_title">Contact us</string>
    <string name="about_us_title">About us</string>
    <string name="details_title">Details</string>
    <string name="discover_title">Discover</string>
    <string name="favorites_title">Your favorites</string>
    <string name="back_arrow_navigate_to_home_screen">a back arrow button to navigate to home screen</string>
    <string name="input_is_blank_title">The title can\'t be empty</string>
    <string name="input_is_blank_description">The description can\'t be empty</string>
    <string name="input_is_blank_address">The address can\'t be empty</string>
    <string name="input_is_blank_date">The date can\'t be empty</string>
    <string name="input_is_blank_img_list">You must choose at least one image</string>
    <string name="ok">OK</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="memory_deleted">Memory deleted</string>
    <string name="logged_out">Logged out</string>
    <string name="delete_memory">Delete memory</string>
    <string name="logout">Logout</string>
    <string name="delete_alert_dialog">Are you sure you want to permanently delete this memory?</string>
    <string name="logout_alert_dialog">Are you sure you want to logout ?</string>
    <string name="edit_your_memory">Edit your memory</string>
    <string name="save_edited_memory">Save edited memory</string>
    <string name="memory_description">Memory description</string>
    <string name="location_admin">Location admin</string>
    <string name="location">Location</string>
    <string name="country">Country</string>
    <string name="location_not_found">Location not found</string>
    <string name="type_new_name_if_needed">Edit name ?</string>
    <string name="type_new_description_if_needed">Edit description ?</string>
    <string name="choose_another_date">Choose another date ?</string>
    <string name="a_empty_image_holder_with_a_add_sign_in_the_center">A empty image holder with a add sign in the center</string>
    <string name="your_memories">Your memories:</string>
    <string name="discover_new_places">Discover new places:</string>
    <string name="death_zone">DEATH ZONE</string>
    <string name="an_image_of_the_presented_location">An image of the presented location</string>
    <string name="a_scrollable_horizontal_list_displaing_discoverable_mountains">A scrollable horizontal list displaing discoverable mountains</string>
    <string name="location_flag_image">Location flag image</string>
    <string name="first_climber">First climber:</string>
    <string name="first_climbed_in">First climbed in:</string>
    <string name="explore">Learn and explore</string>
    <string name="a_backpack_artwork">A backpack artwork</string>
    <string name="sos">SOS</string>
    <string name="enable_sos_system">LIBIHB SOS system</string>
    <string name="click_here_to_explore_new_places">Click here to explore new places</string>
    <string name="don_t_have_a_memory_saved_yet_start_here">Don\'t have a memory saved yet? Start here</string>
    <string name="favorites">Favorites</string>
    <string name="a_red_hart_image">a red hart image</string>
    <string name="to_enable_libihb_sos_mode_you_need_to_add_an_emergency_phone_number">To enable LIBIHB-SOS-MODE you need to add an emergency contact phone number:</string>
    <string name="save_emergency_contact">Save emergency contact</string>
    <string name="sos_message_1">This is an emergency message for </string>
    <string name="sos_message_2">I am requesting help, those are my coordinates: </string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">, Longitude: </string>
    <string name="sos_sent">Emergency message sent with current location to </string>
    <string name="retrieve_location_failed">Unable to retrieve current location</string>
    <string name="sms_permission_denied">SMS permission denied</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="emergency_contact_saved">Emergency contact saved</string>
    <string name="emergency_contact_failed_to_save">Failed to save the contact</string>
    <string name="sos_system_explained"><b>SOS BUTTON</b> once <b>pressed</b> immediately <b>sends</b> an emergency <b>message</b>  containing your <b>current location</b> to the <b>emergency contact person</b></string>
    <string name="set_up_emg_form"> <b>Setup the button by filling the following form:</b></string>
    <string name="emergency_contact_name">Emergency contact name</string>
    <string name="emergency_contact_phone">Emergency contact phone</string>
    <string name="libihb_sos_system">LIBIHB-SOS-SYSTEM</string>
    <string name="no_memory_added_to_favorites_yet">No memory added to favorites yet</string>
    <string name="lifeisbetterinhikingboosts_v_1_0">LifeIsBetterInHikingBoosts v.1.0</string>
    <string name="mountain_api_by">Mountain API by:</string>
    <string name="https_rapidapi_com_ryanfin_api_mountain_api1">https://rapidapi.com/RyanFin/api/mountain-api1/</string>
    <string name="weather_api_by">Weather API by:</string>
    <string name="https_openweathermap_org">https://openweathermap.org/</string>
    <string name="maps_api_by">Maps API by:</string>
    <string name="https_developers_google_com_maps">https://developers.google.com/maps/</string>
    <string name="http_www_freepik_com">http://www.freepik.com</string>
    <string name="some_artwork_designed_by_rawpixel_com">Some artwork: designed by rawpixel.com</string>
</resources>