<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/exploreFragment"
        android:icon="@drawable/ic_explore"
        android:title="@string/explore" />
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_favorite_drawer"
        android:title="@string/favorites" />
    <item
        android:id="@+id/sosFragment"
        android:icon="@drawable/ic_sos"
        android:title="@string/sos" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/logOutFragment"
        android:icon="@drawable/ic_log_out"
        android:title="@string/log_out" />
</menu>