<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardBackgroundColor="@color/md_theme_light_inverseOnSurface">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/memory_image_view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/rimetea"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundedCorners" />

        <TextView
            android:id="@+id/place_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="32dp"
            android:text="@string/place_name"
            android:textColor="@color/md_theme_light_primary"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/memory_image_view"
            app:layout_constraintTop_toTopOf="@+id/memory_image_view" />

        <TextView
            android:id="@+id/place_location_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:text="@string/place_location"
            android:textColor="@color/md_theme_light_primary"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/memory_image_view"
            app:layout_constraintTop_toBottomOf="@+id/place_name_text_view" />

        <TextView
            android:id="@+id/date_of_travel_image_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/date_of_travel"
            android:textColor="@color/md_theme_light_primary"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/place_location_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>